--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <a href="">Joakim Leinonen</a>
        
-        <a href="Kotitehtävät.html">Kotitehtävät</a>
+        <a href="index.html">Kotitehtävät</a>
        
         <a href="Contacts">Contacts</a>
       </div>
